--- a/.github/actions/run-python-tests/action.yaml
+++ b/.github/actions/run-python-tests/action.yaml
@@ -55,3 +55,5 @@ runs:
 
   - name: ☂ Upload Code Coverage
     uses: codecov/codecov-action@v3.1.0
+    with:
+      token: ${{ secrets.CODECOV_IO_TOKEN }}
